k8s/remux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remux
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: remux
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
